# core

./: .all-contributorsrc  .release-please-manifest.json  .release.toml  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: build.yaml  contributor.yaml  release.yaml  test.yaml
adapters/puniyu_adapter_console/: CHANGELOG.md
backup/puniyu_account/: Cargo.toml
backup/puniyu_adapter_api/src/: lib.rs
backup/puniyu_adapter_core/: Cargo.toml
backup/puniyu_adapter_core/src/: lib.rs
backup/puniyu_adapter_core/tests/: registry.rs
backup/puniyu_adapter_types/src/: types.rs
backup/puniyu_adapter_types/tests/: types.rs
backup/puniyu_api/: Cargo.toml
backup/puniyu_api/src/: adapter.rs  dispatch.rs  lib.rs  plugin.rs  runtime.rs  server.rs  task.rs
backup/puniyu_bot/: Cargo.toml
backup/puniyu_bot/src/: lib.rs
backup/puniyu_command/src/: lib.rs  registry.rs
backup/puniyu_command_parser/: Cargo.toml
backup/puniyu_command_parser/src/: args.rs  lib.rs
backup/puniyu_command_types/: Cargo.toml
backup/puniyu_common/: CHANGELOG.md  Cargo.toml
backup/puniyu_common/src/: config.rs  lib.rs  logger.rs
backup/puniyu_config/: Cargo.toml
backup/puniyu_config/src/: bot.rs  core.rs  friend.rs  lib.rs  (+1 more)
backup/puniyu_contact/: Cargo.toml
backup/puniyu_core/: CHANGELOG.md  Cargo.toml  README.md
backup/puniyu_error/: Cargo.toml
backup/puniyu_event/: Cargo.toml  README.md
backup/puniyu_handler/: Cargo.toml
backup/puniyu_loader/: Cargo.toml
backup/puniyu_message/: Cargo.toml
backup/puniyu_plugin_core/: Cargo.toml
backup/puniyu_segment/: Cargo.toml  README.md
backup/puniyu_semver/: CHANGELOG.md  Cargo.toml
backup/puniyu_sender/: Cargo.toml
backup/puniyu_server/: Cargo.toml
backup/puniyu_task/: Cargo.toml
backup/puniyu_version/: Cargo.toml
crates/puniyu_account/: CHANGELOG.md  Cargo.toml
crates/puniyu_adapter/: CHANGELOG.md  Cargo.toml
crates/puniyu_adapter_api/: CHANGELOG.md  Cargo.toml
crates/puniyu_adapter_api/src/: console.rs  handle.rs  lib.rs  onebot.rs
crates/puniyu_adapter_core/: CHANGELOG.md  Cargo.toml  build.rs
crates/puniyu_adapter_core/src/: handle.rs  lib.rs  registry.rs  types.rs
crates/puniyu_adapter_core/src/registry/: store.rs
crates/puniyu_adapter_core/tests/: registry.rs
crates/puniyu_adapter_types/: CHANGELOG.md  Cargo.toml
crates/puniyu_api/: CHANGELOG.md  Cargo.toml
crates/puniyu_api/src/: account.rs  adapter.rs  bot.rs  command.rs  config.rs  contact.rs  dispatch.rs  event.rs  handler.rs  lib.rs  message.rs  plugin.rs  result.rs  runtime.rs  segment.rs  semver.rs  sender.rs  server.rs  task.rs
crates/puniyu_bot/: CHANGELOG.md  Cargo.toml
crates/puniyu_build/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_bus/: CHANGELOG.md
crates/puniyu_command/: CHANGELOG.md  Cargo.toml
crates/puniyu_command_parser/: CHANGELOG.md  Cargo.toml
crates/puniyu_command_types/: CHANGELOG.md  Cargo.toml
crates/puniyu_common/: CHANGELOG.md  Cargo.toml
crates/puniyu_common/src/: app.rs  lib.rs  response.rs
crates/puniyu_config/: CHANGELOG.md  Cargo.toml
crates/puniyu_config/src/: app.rs  bot.rs  config.rs  friend.rs  group.rs  lib.rs  logger.rs  registry.rs  types.rs
crates/puniyu_config/src/registry/: store.rs
crates/puniyu_config/src/types/: app.rs  core.rs
crates/puniyu_config/src/types/app/: adapter.rs  list.rs  logger.rs  server.rs
crates/puniyu_config/src/types/bot/: option.rs
crates/puniyu_config/src/types/friend/: option.rs
crates/puniyu_config/src/types/group/: option.rs
crates/puniyu_contact/: CHANGELOG.md  Cargo.toml
crates/puniyu_context/: CHANGELOG.md  Cargo.toml
crates/puniyu_core/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_core_bot/: Cargo.toml
crates/puniyu_core_config/: Cargo.toml
crates/puniyu_core_contact/: Cargo.toml
crates/puniyu_core_element/: Cargo.toml
crates/puniyu_core_event/: Cargo.toml
crates/puniyu_core_event/src/: lib.rs
crates/puniyu_core_semver/: Cargo.toml
crates/puniyu_core_semver/src/: lib.rs
crates/puniyu_core_semver/tests/: version.rs
crates/puniyu_core_sender/: Cargo.toml
crates/puniyu_core_version/: Cargo.toml
crates/puniyu_core_version/src/: lib.rs
crates/puniyu_dispatch/: CHANGELOG.md  Cargo.toml
crates/puniyu_element/: CHANGELOG.md  Cargo.toml
crates/puniyu_error/: CHANGELOG.md  Cargo.toml
crates/puniyu_event/: CHANGELOG.md  Cargo.toml
crates/puniyu_handler/: CHANGELOG.md  Cargo.toml
crates/puniyu_handler_command/: CHANGELOG.md
crates/puniyu_hook/: CHANGELOG.md  Cargo.toml
crates/puniyu_library/: CHANGELOG.md
crates/puniyu_loader/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_loader/src/: lib.rs  types.rs
crates/puniyu_loader/tests/: loader_basic.rs
crates/puniyu_loader_builtin/: CHANGELOG.md  Cargo.toml
crates/puniyu_macros/: CHANGELOG.md  Cargo.toml
crates/puniyu_macros/src/: common.rs  lib.rs  types.rs
crates/puniyu_macros/src/adapter/: hook.rs
crates/puniyu_macros/src/plugin/: command.rs  config.rs  hook.rs  task.rs
crates/puniyu_macros/tests/ui/: fail_plugin_hook_bad_type.rs
crates/puniyu_matcher_command/: CHANGELOG.md
crates/puniyu_message/: CHANGELOG.md  Cargo.toml
crates/puniyu_path/: CHANGELOG.md  Cargo.toml
crates/puniyu_plugin/: CHANGELOG.md  Cargo.toml
crates/puniyu_plugin_core/: CHANGELOG.md  Cargo.toml
crates/puniyu_plugin_core/src/: lib.rs
crates/puniyu_plugin_core/src/registry/: store.rs
crates/puniyu_protobuf/: CHANGELOG.md  Cargo.toml
crates/puniyu_registry/: CHANGELOG.md
crates/puniyu_runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_segment/: CHANGELOG.md  Cargo.toml
crates/puniyu_semver/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_sender/: CHANGELOG.md  Cargo.toml
crates/puniyu_server/: CHANGELOG.md  Cargo.toml
crates/puniyu_task/: CHANGELOG.md  Cargo.toml
crates/puniyu_types/: CHANGELOG.md  Cargo.toml
crates/puniyu_version/: CHANGELOG.md  Cargo.toml
crates/puniyu_version/src/: lib.rs
plugins/puniyu_plugin_basic/: CHANGELOG.md
plugins/puniyu_plugin_server/: CHANGELOG.md  Cargo.toml
(+100 files in other folders)
