[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/puniyu/core"
repository = "https://github.com/puniyu/core"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
log = { version = "0.4.28" }
jiff = { version = "0.2.24", features = ["serde"] }
smol_str = { version = "0.3.6", features = ["serde"] }
tokio = { version = "1.47.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }
toml = { version = "1.0.0" }
futures = { version = "0.3.31" }
async-trait = { version = "0.1.89" }
thiserror = { version = "2.0.18" }
strum = { version = "0.28.0", features = ["derive"] }
clap = { version = "4.5", default-features = false, features = ["std"] }
actix-web = { version = "4.11.0" }
reqwest = { version = "0.13.0", default-features = false, features = [
    "json",
    "rustls",
] }
derive_more = { version = "2.1.1" }
bon = { version = "3.9.1" }
cargo_metadata = { version = "0.23.1" }
const-str = { version = "1.1.0" }
bytes = { version = "1.11.0", features = ["serde"] }

puniyu_logger = { version = "0.7.2" }
puniyu_system_info = { version = "1.5.6" }

puniyu_error = { version = "0.8.2", path = "./crates/puniyu_error", default-features = false }
puniyu_version = { version = "0.8.1", path = "./crates/puniyu_version" }
puniyu_common = { version = "0.8.2", path = "./crates/puniyu_common", default-features = false }
puniyu_element = { version = "0.8.1", path = "./crates/puniyu_element" }
puniyu_message = { version = "0.8.1", path = "./crates/puniyu_message" }
puniyu_segment = { version = "0.8.1", path = "./crates/puniyu_segment" }
puniyu_contact = { version = "0.8.1", path = "./crates/puniyu_contact" }
puniyu_sender = { version = "0.8.1", path = "./crates/puniyu_sender" }
puniyu_account = { version = "0.8.1", path = "./crates/puniyu_account" }
puniyu_path = { version = "0.8.2", path = "./crates/puniyu_path" }
puniyu_event = { version = "0.8.4", path = "./crates/puniyu_event" }
puniyu_dispatch = { version = "0.8.4", path = "./crates/puniyu_dispatch" }
puniyu_context = { version = "0.8.4", path = "./crates/puniyu_context" }

puniyu_config = { version = "0.8.2", path = "./crates/puniyu_config" }

puniyu_adapter_core = { version = "0.8.5", path = "./crates/puniyu_adapter_core" }
puniyu_adapter_types = { version = "0.8.5", path = "./crates/puniyu_adapter_types" }
puniyu_runtime = { version = "0.8.4", path = "./crates/puniyu_runtime" }

puniyu_bot = { version = "0.8.4", path = "./crates/puniyu_bot" }

puniyu_command = { version = "0.8.4", path = "./crates/puniyu_command" }
puniyu_command_parser = { version = "0.8.4", path = "./crates/puniyu_command_parser" }
puniyu_command_types = { version = "0.8.2", path = "./crates/puniyu_command_types" }

puniyu_server = { version = "0.8.4", path = "./crates/puniyu_server", default-features = false }

puniyu_task = { version = "0.8.2", path = "./crates/puniyu_task" }
puniyu_hook = { version = "0.8.4", path = "./crates/puniyu_hook" }
puniyu_handler = { version = "0.8.4", path = "./crates/puniyu_handler" }
puniyu_handler_command = { version = "0.8.0", path = "./crates/puniyu_handler_command" }
puniyu_handler_hook = { version = "0.8.0", path = "./crates/puniyu_handler_hook" }
puniyu_plugin_core = { version = "0.8.5", path = "./crates/puniyu_plugin_core" }

puniyu_loader = { version = "0.8.5", path = "./crates/puniyu_loader" }
puniyu_core = { version = "0.8.5", path = "./crates/puniyu_core" }
puniyu_api = { version = "0.8.5", path = "./crates/puniyu_api" }

[profile.release]
lto = "fat"
opt-level = "z"
incremental = false

[profile.dev]
lto = false
opt-level = 1
incremental = true
