[package]
name = "puniyu_adapter_api"
version = "0.8.9"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait.workspace = true
puniyu_adapter_types.workspace = true
puniyu_contact.workspace = true
puniyu_error.workspace = true
puniyu_message.workspace = true
