[package]
name = "puniyu_adapter_api"
version = "0.9.1"
description = "puniyu 统一适配器 API trait 库，定义 AdapterApi 基础接口"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait.workspace = true
serde_json.workspace = true
puniyu_account.workspace = true
puniyu_adapter_types.workspace = true
puniyu_contact.workspace = true
puniyu_error.workspace = true
puniyu_message.workspace = true
puniyu_common.workspace = true
