[package]
name = "puniyu_adapter_core"
version = "0.8.14"
description = "puniyu 适配器核心库，统一适配器定义、API 聚合与注册表管理流程"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
async-trait.workspace = true

puniyu_semver.workspace = true
const-str.workspace = true
puniyu_adapter_types.workspace = true
puniyu_adapter_api.workspace = true
puniyu_config.workspace = true
puniyu_error.workspace = true
puniyu_server.workspace = true
puniyu_version.workspace = true
puniyu_account.workspace = true
puniyu_message.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
bytes.workspace = true
puniyu_contact.workspace = true

[features]
default = []
registry = ["puniyu_error/registry"]
