[package]
name = "puniyu_api"
version = "0.9.1"
description = "puniyu API 模块"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
inventory = { version = "0.3.24" }

toml.workspace = true
puniyu_config.workspace = true
puniyu_bot.workspace = true
puniyu_semver.workspace = true
puniyu_account.workspace = true
puniyu_path.workspace = true
puniyu_server.workspace = true
puniyu_common.workspace = true
puniyu_event.workspace = true
puniyu_dispatch.workspace = true
puniyu_context.workspace = true
puniyu_sender.workspace = true
puniyu_contact.workspace = true
puniyu_element.workspace = true
puniyu_segment.workspace = true
puniyu_message.workspace = true
puniyu_adapter_api.workspace = true
puniyu_adapter_core.workspace = true
puniyu_adapter_types.workspace = true
puniyu_command_parser.workspace = true
puniyu_error.workspace = true

async-trait.workspace = true

puniyu_task = { workspace = true, features = ["registry"] }
puniyu_handler = { workspace = true, features = ["registry"] }
puniyu_plugin_core = { workspace = true, features = ["registry"] }
puniyu_command = { workspace = true, features = ["registry"] }

tokio = { workspace = true, features = ["full"] }


