[package]
name = "puniyu_build"
version = "0.8.1"
description = "puniyu 的构建模块"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true

cargo_metadata = { workspace = true, features = ["builder"] }


