[package]
name = "puniyu_common"
version = "0.9.0"
description = "puniyu crate for common"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
http = { version = "1.4.2" }

toml.workspace = true
serde.workspace = true
puniyu_system_info.workspace = true
puniyu_semver.workspace = true
puniyu_logger.workspace = true

puniyu_error = { workspace = true, features = ["config"] }


