[package]
name = "puniyu_config"
version = "0.8.13"
description = "puniyu 配置管理库，统一应用、Bot、群聊与好友配置读取与热重载"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
sugar_path = { version = "2.0.1", features = ["cached_current_dir"] }

log.workspace = true
toml.workspace = true
serde.workspace = true
serde_repr.workspace = true
smol_str.workspace = true

puniyu_logger.workspace = true
puniyu_path.workspace = true
puniyu_common.workspace = true

puniyu_error = { workspace = true, features = ["config", "registry"] }
notify-debouncer-full = { version = "0.7.0", features = ["flume"] }
