[package]
name = "puniyu_core_event"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

puniyu_core_bot.workspace = true
puniyu_core_contact.workspace = true
puniyu_core_sender.workspace = true
puniyu_core_element.workspace = true

