[package]
name = "puniyu_core_semver"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

derive_more = { workspace = true, features = ["display"] }
semver = { version = "1.0.28" }

[dev-dependencies]
serde_json.workspace = true
