[package]
name = "puniyu_core_version"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
const-str.workspace = true

puniyu_core_semver.workspace = true

[lints]
workspace = true
