[package]
name = "puniyu_loader"
version = "0.8.16"
description = "Puniyu 加载器类型定义库，提供统一的 Loader trait 和组件发现类型"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
puniyu_error.workspace = true
puniyu_adapter_core.workspace = true
puniyu_plugin_core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
