[package]
name = "puniyu_macros"
version = "0.8.1"
description = "puniyu crate for proc-macro"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
croner.workspace = true
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
puniyu_adapter.workspace = true
puniyu_context.workspace = true
puniyu_plugin.workspace = true
trybuild = "1"
