[package]
name = "puniyu_plugin_core"
version = "0.9.4"
description = "puniyu 插件核心库, 统一插件定义、API 聚合与注册表管理流程"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
const-str.workspace = true
puniyu_error.workspace = true
puniyu_semver.workspace = true
puniyu_config.workspace = true
puniyu_common.workspace = true
puniyu_command.workspace = true
puniyu_task.workspace = true
puniyu_server.workspace = true
puniyu_version.workspace = true

[features]
default = []
registry = ["puniyu_error/registry"]
