[package]
name = "puniyu_version"
version = "0.9.4"
description = "version for puniyu"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
puniyu_semver.workspace = true

const-str.workspace = true

